add tests, fix collision detection